# ai-ssistant

./: Cargo.toml  build.rs  todo
src/: api_client.rs  api_types.rs  main.rs  style.css
src/chat_object/: imp.rs  mod.rs
src/chat_row/: imp.rs  mod.rs
src/resources/: chat_row.xml  resources.gresource.xml  window.xml
src/window/: imp.rs  mod.rs
