[package]
name = "hello_world_using_temps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.8.1", package = "gtk4", features = ["v4_14"] }
gio = "0.19.0"
adw = { version = "0.6.0", package = "libadwaita", features = ["v1_4"] }
futures = "0.3.30"
reqwest = { version = "0.12.1", features=["json","stream"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full", "rt-multi-thread"] }
async-channel = "2.2.0"
json = "0.12.4"
dotenv = "0.15.0"
gdk = "0.18.0"
futures-util = "0.3.30"
http = "1.1.0"
bytes = "1.6.0"
bytemuck = "1.15.0"

[build-dependencies]
glib-build-tools = "0.19.0"
